--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
+baseurl: "/bikepedia"
+url: "https://jandetlefsen.github.io" # the base hostname & protocol for your site
+github_username:  jandetlefsen
+
 collections:
   parts:
     output: true
